Forward ported ODROID upstream config changes.

--- a/arch/arm/configs/snappy_odroidc_defconfig
+++ b/arch/arm/configs/snappy_odroidc_defconfig
@@ -105,7 +105,8 @@ CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 # CONFIG_CGROUP_FREEZER is not set
 CONFIG_CGROUP_DEVICE=y
-# CONFIG_CPUSETS is not set
+CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_MEMCG=y
@@ -1232,7 +1233,7 @@ CONFIG_AMAUDIO=y
 # CONFIG_AMAUDIO2 is not set
 
 #
-# Audio dsp process 
+# Audio dsp process
 #
 CONFIG_AML_AUDIO_DSP=y
 
@@ -2579,14 +2580,14 @@ CONFIG_RC_MAP=y
 CONFIG_RC_DECODERS=y
 CONFIG_LIRC=m
 CONFIG_IR_LIRC_CODEC=m
-CONFIG_IR_NEC_DECODER=y
-CONFIG_IR_RC5_DECODER=y
-CONFIG_IR_RC6_DECODER=y
-CONFIG_IR_JVC_DECODER=y
-CONFIG_IR_SONY_DECODER=y
-CONFIG_IR_RC5_SZ_DECODER=y
-CONFIG_IR_SANYO_DECODER=y
-CONFIG_IR_MCE_KBD_DECODER=y
+CONFIG_IR_NEC_DECODER=m
+CONFIG_IR_RC5_DECODER=m
+CONFIG_IR_RC6_DECODER=m
+CONFIG_IR_JVC_DECODER=m
+CONFIG_IR_SONY_DECODER=m
+CONFIG_IR_RC5_SZ_DECODER=m
+CONFIG_IR_SANYO_DECODER=m
+CONFIG_IR_MCE_KBD_DECODER=m
 CONFIG_RC_DEVICES=y
 CONFIG_RC_ATI_REMOTE=m
 CONFIG_IR_IMON=m
@@ -2595,7 +2596,7 @@ CONFIG_IR_REDRAT3=m
 CONFIG_IR_STREAMZAP=m
 CONFIG_IR_IGUANA=m
 CONFIG_IR_TTUSBIR=m
-# CONFIG_RC_LOOPBACK is not set
+CONFIG_RC_LOOPBACK=m
 CONFIG_IR_GPIO_CIR=m
 CONFIG_MEDIA_USB_SUPPORT=y
 
@@ -3700,6 +3701,7 @@ CONFIG_UMPLOCK=y
 # ODROID Specific Hardware
 #
 CONFIG_ODROID_TOUCHSCREEN_ADS7846=m
+CONFIG_ODROID_AML_GPIO_LIB=m
 
 #
 # File systems
